# CVRP_HybridQuantum_Feld

./: README.md
quantumrouting/: pyproject.toml  run.py
quantumrouting/src/quantumrouting/: const.py  distances.py  qubo.py  solver.py  types.py  utils.py
quantumrouting/src/quantumrouting/analysis/: plot.py
quantumrouting/src/quantumrouting/solvers/: LKH  fullqubo.py  lk3.py  partitionqubo.py  qbsolv.py  utils.py
quantumrouting/src/quantumrouting/wrappers/: lk3.py  qubo.py
quantumrouting/src/tests/: sample_test.json  test_types.py
quantumrouting/src/tests/solvers/: test_full_qubo.py  test_lkh_solver.py  test_partition_full_qubo.py
quantumrouting/src/tests/wrappers/: test_qubo.py
quantumrouting/tests/: test_types.py
