[tool.poetry]
name = "quantum-routing"
version = "0.1.0"
description = ""
authors = ["Denise Avila <denisefavila@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
numpy = "^1.21.2"
dwave-system = "^1.8.0"
dwave-qbsolv = "^0.3.3"
matplotlib = "^3.4.3"
argparse = "^1.4.0"
dwave-neal = "^0.5.8"
folium = "^0.12.1"
lkh = "^1.0.4"
tsplib95 = "^0.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
